src/styles/hero-gradient.scss
:root {
  --gradient-color-bg1: rgb(138, 42, 226);
  --gradient-color-bg2: rgb(0, 71, 171);
  --gradient-color-1: 18, 113, 255;
  --gradient-color-2: 221, 74, 255;
  --gradient-color-3: 100, 220, 255;
  --gradient-color-4: 200, 50, 50;
  --gradient-color-5: 180, 180, 50;
  --gradient-circle-size: 80%;
  --blending: soft-light;
}

@keyframes moveInCircle {
  0% {
    transform: rotate(0deg);
  }
  50% {
    transform: rotate(180deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

@keyframes moveHorizontal {
  0% {
    transform: translateX(-50%) translateY(-10%);
  }
  50% {
    transform: translateX(50%) translateY(10%);
  }
  100% {
    transform: translateX(-50%) translateY(-10%);
  }
}

@keyframes moveVertical {
  0% {
    transform: translateY(-50%);
  }
  50% {
    transform: translateY(50%);
  }
  100% {
    transform: translateY(-50%);
  }
}

.bg-gradient {
  width: 100vw;
  height: 100vh;
  position: absolute;
  overflow: hidden;

  background: linear-gradient(
    40deg,
    var(--gradient-color-bg1),
    var(--gradient-color-bg2)
  );

  top: 0;
  left: 0;

  svg {
    display: none;
  }

  .bg-gradient-container {
    width: 100%;
    height: 100%;
    filter: brightness(0.7) blur(90px) !important;
  }

  .gradient-1 {
    position: absolute;
    background: radial-gradient(
        circle at center,
        rgba(var(--gradient-color-1), 0.8) 0,
        rgba(var(--gradient-color-1), 0) 40%
      )
      no-repeat;
    mix-blend-mode: var(--blending);

    width: var(--gradient-circle-size);
    height: var(--gradient-circle-size);
    top: calc(50% - var(--gradient-circle-size) / 2);
    left: calc(50% - var(--gradient-circle-size) / 2);

    transform-origin: center center;
    animation: moveVertical 30s ease infinite;
    opacity: 1;
  }

  .gradient-2 {
    position: absolute;
    background: radial-gradient(
        circle at center,
        rgba(var(--gradient-color-2), 0.8) 0,
        rgba(var(--gradient-color-2), 0) 40%
      )
      no-repeat;
    mix-blend-mode: var(--blending);

    width: var(--gradient-circle-size);
    height: var(--gradient-circle-size);
    top: calc(50% - var(--gradient-circle-size) / 2);
    left: calc(50% - var(--gradient-circle-size) / 2);

    transform-origin: calc(50% - 400px);
    animation: moveInCircle 20s reverse infinite;
    opacity: 1;
  }

  .gradient-3 {
    position: absolute;
    background: radial-gradient(
        circle at center,
        rgba(var(--gradient-color-3), 0.8) 0,
        rgba(var(--gradient-color-3), 0) 40%
      )
      no-repeat;
    mix-blend-mode: var(--blending);

    width: var(--gradient-circle-size);
    height: var(--gradient-circle-size);
    top: calc(50% - var(--gradient-circle-size) / 2 + 200px);
    left: calc(50% - var(--gradient-circle-size) / 2 - 500px);

    transform-origin: calc(50% + 400px);
    animation: moveInCircle 40s linear infinite;
    opacity: 1;
  }

  .gradient-4 {
    position: absolute;
    background: radial-gradient(
        circle at center,
        rgba(var(--gradient-color-4), 0.8) 0,
        rgba(var(--gradient-color-4), 0) 40%
      )
      no-repeat;
    mix-blend-mode: var(--blending);

    width: var(--gradient-circle-size);
    height: var(--gradient-circle-size);
    top: calc(50% - var(--gradient-circle-size) / 2);
    left: calc(50% - var(--gradient-circle-size) / 2);

    transform-origin: calc(50% - 200px);
    animation: moveHorizontal 40s ease infinite;
    opacity: 1;
  }

  .gradient-5 {
    position: absolute;
    background: radial-gradient(
        circle at center,
        rgba(var(--gradient-color-5), 0.8) 0,
        rgba(var(--gradient-color-5), 0) 40%
      )
      no-repeat;
    mix-blend-mode: var(--blending);

    width: calc(var(--gradient-circle-size) * 2);
    height: calc(var(--gradient-circle-size) * 2);
    top: calc(50% - var(--gradient-circle-size));
    left: calc(50% - var(--gradient-circle-size));

    transform-origin: calc(50% - 800px) calc(50% + 200px);
    animation: moveInCircle 20s ease infinite;
    opacity: 1;
  }
}

